#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(Bson_Vector_test)

AC_USE_SYSTEM_EXTENSIONS

AM_INIT_AUTOMAKE(Bson_Vector_test, 1.0)

AC_CONFIG_SRCDIR([bson_vector_test.cpp])

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT(Makefile)
