#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(file_ipc)

AC_USE_SYSTEM_EXTENSIONS

AM_INIT_AUTOMAKE(file_ipc,1.0)


AC_CONFIG_SRCDIR([IPC.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([memset])

AC_OUTPUT(Makefile)
