#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(multi_index_demo)

AC_USE_SYSTEM_EXTENSIONS

AM_INIT_AUTOMAKE( multi_index_demo, 1.0 )

AC_CONFIG_SRCDIR([multi_index_demo.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL

# Checks for library functions.

AC_OUTPUT(Makefile)
