#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(message_sender_client)
AC_CONFIG_SRCDIR([client.cpp])
AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE(message_sender_client, 1.0)


# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

#add by Aimer , cause method use realloc
AC_FUNC_REALLOC 

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h netinet/in.h strings.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([bzero socket])

AC_OUTPUT(Makefile)
