#                 -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.


AC_INIT(message_sender_server)

AC_USE_SYSTEM_EXTENSIONS    # we will use bson and boost 

AM_INIT_AUTOMAKE(message_sender_server,1.0)

AC_CONFIG_SRCDIR([server.cpp])

AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX

AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([limits.h netdb.h netinet/in.h strings.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SSIZE_T

# Checks for library functions.
AC_CHECK_FUNCS([bzero socket])

AC_OUTPUT(Makefile)
